--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,10 +39,15 @@
             <div class="form-group">
                 <div class="input-group clearfix">
                     <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                    <label for="imageInput" class="camera-icon">
+                        <i class="fa fa-camera"></i>
+                    </label>
+                    <input type="file" id="imageInput" accept="image/*" style="display: none;">
                     <button type="submit" class="primary">Send</button>
                 </div>
             </div>
         </form>
+
     </div>
 </div>
 
